--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:largeHeap="true"
+        android:hardwareAccelerated="true"
+
         android:theme="@style/Theme.Majong"
         tools:targetApi="31">
+
+
+
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
